--- a/signup.html
+++ b/signup.html
@@ -39,6 +39,34 @@
             <button type="submit">Sign Up</button>
         </form>
     </section>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up - Dream by Us</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Sign Up for Dream by Us</h1>
+    </header>
+
+    <!-- Arrow and "Go back to the main page" link -->
+    <div class="back-to-main">
+        <a href="index.html">
+            <!-- Left Arrow Symbol -->
+            <span class="arrow">←</span> Go back to the main page
+        </a>
+    </div>
+
+    <section class="form-section">
+        <form action="home.html" method="post">
+            <label for="firstname">First Name:</label>
+            <input type="text" id="firstname" name="firstname" required>
+
+            <label for="surname">
+
 
     <footer>
         <p>Dream by Us &copy; 2024</p>
