--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
             </ul>
         </nav>
 
-        <!-- Cogwheel Menu on the Right Side -->
-        <div class="settings-menu">
-            <span class="settings-icon">⚙️</span>
-            <div class="dropdown-content">
-                <a href="signin.html">Login</a>
-                <a href="signup.html">Sign up</a>
-                <a href="logout.html">Logout</a>
-            </div>
-        </div>
+
+       <!-- Cogwheel Menu on the Right Side -->
+<div class="settings-menu">
+    <span class="settings-icon">⚙️</span>
+    <div class="dropdown-content">
+        <!-- Link to Signin Page -->
+        <a href="signin.html">Login</a>
+        <a href="signup.html">Sign up</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
 
         <!-- Search bar -->
         <div class="search-bar">
